--- a/contact.html
+++ b/contact.html
@@ -79,15 +79,23 @@
                 <div class="cardbox">
                     <h3 class="content-header">Connect with Me</h3>
                     <div class="content">
-                        <a href="https://github.com/nikitas91" target="_blank">
-                            <img src="./assets/images/github.png" alt="GitHub">
-                        </a>
-                        <a href="https://www.linkedin.com/in/nikita-sasunkevich/" target="_blank">
-                            <img src="./assets/images/linkedin.png" alt="LinkedIn">
-                        </a>
-                        <a href="https://stackoverflow.com/users/8775239/nikitas21" target="_blank">
-                            <img src="./assets/images/stackoverflow.png" alt="StackOverflow">
-                        </a>
+                        <div class="row">
+                            <div class="col-md-4 col-sm-4 col-xs-4">
+                                <a href="https://github.com/nikitas91" target="_blank">
+                                    <img src="./assets/images/github.png" alt="GitHub" class="img-responsive center-block">
+                                </a>
+                            </div>
+                            <div class="col-md-4 col-sm-4 col-xs-4">
+                                <a href="https://www.linkedin.com/in/nikita-sasunkevich/" target="_blank">
+                                    <img src="./assets/images/linkedin.png" alt="LinkedIn" class="img-responsive center-block">
+                                </a>
+                            </div>
+                            <div class="col-md-4 col-sm-4 col-xs-4">
+                                <a href="https://stackoverflow.com/users/8775239/nikitas21" target="_blank">
+                                    <img src="./assets/images/stackoverflow.png" alt="StackOverflow" class="img-responsive center-block">
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
