--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
                                 <div class="card-container">
                                     <div class="card">
                                         <span class="card-banner">Hangman</span>
-                                        <img src="./assets/images/image1.jpeg" class="img-responsive img-thumbnail" alt="">
+                                        <img src="./assets/images/image1.jpeg" class="img-responsive img-thumbnail" alt="random image">
                                     </div>
                                 </div>
                             </div>
@@ -76,7 +76,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-md-6 col-sm-6 col-xs-12">
                                 <div class="card-container">
                                     <div class="card">
                                         <span class="card-banner">Trivia Game</span>
@@ -84,7 +84,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-md-6 col-sm-6 col-xs-12">
                                 <div class="card-container">
                                     <div class="card">
                                         <span class="card-banner">Rutgers Info Widget</span>
@@ -94,7 +94,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-md-6 col-sm-6 col-xs-12">
                                 <div class="card-container">
                                     <div class="card">
                                         <span class="card-banner">Rock Paper Scissors</span>
@@ -110,15 +110,23 @@
                 <div class="cardbox">
                     <h3 class="content-header">Connect with Me</h3>
                     <div class="content">
-                        <a href="https://github.com/nikitas91" target="_blank">
-                            <img src="./assets/images/github.png" alt="GitHub">
-                        </a>
-                        <a href="https://www.linkedin.com/in/nikita-sasunkevich/" target="_blank">
-                            <img src="./assets/images/linkedin.png" alt="LinkedIn">
-                        </a>
-                        <a href="https://stackoverflow.com/users/8775239/nikitas21" target="_blank">
-                            <img src="./assets/images/stackoverflow.png" alt="StackOverflow">
-                        </a>
+                        <div class="row">
+                            <div class="col-md-4 col-sm-4 col-xs-4">
+                                <a href="https://github.com/nikitas91" target="_blank">
+                                    <img src="./assets/images/github.png" alt="GitHub" class="img-responsive center-block">
+                                </a>
+                            </div>
+                            <div class="col-md-4 col-sm-4 col-xs-4">
+                                <a href="https://www.linkedin.com/in/nikita-sasunkevich/" target="_blank">
+                                    <img src="./assets/images/linkedin.png" alt="LinkedIn" class="img-responsive center-block">
+                                </a>
+                            </div>
+                            <div class="col-md-4 col-sm-4 col-xs-4">
+                                <a href="https://stackoverflow.com/users/8775239/nikitas21" target="_blank">
+                                    <img src="./assets/images/stackoverflow.png" alt="StackOverflow" class="img-responsive center-block">
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
