added content-area style to create sticky footer; added style to index, contact, and portfolio pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
         <!-- /.container -->
     </nav>
 
-    <div class="container">
+    <div class="container content-area">
         <div class="row">
             <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                 <div class="cardbox">
@@ -61,44 +61,9 @@
                             <div class="col-md-6 col-sm-6 col-xs-12">
                                 <div class="card-container">
                                     <div class="card">
-                                        <span class="card-banner">Hangman</span>
+                                        <!-- <span class="card-banner">Hangman</span> -->
+                                        <a href="https://github.com/nikitas91/liri-node-app" target="_blank">Liri App</a>
                                         <img src="./assets/images/image1.jpeg" class="img-responsive img-thumbnail" alt="random image">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-sm-6 col-xs-12">
-                                <div class="card-container">
-                                    <div class="card">
-                                        <span class="card-banner">RPG Game</span>
-                                        <img src="./assets/images/image2.jpeg" class="img-responsive img-thumbnail" alt="random image">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6 col-sm-6 col-xs-12">
-                                <div class="card-container">
-                                    <div class="card">
-                                        <span class="card-banner">Trivia Game</span>
-                                        <img src="./assets/images/image3.jpeg" class="img-responsive img-thumbnail" alt="random image">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-sm-6 col-xs-12">
-                                <div class="card-container">
-                                    <div class="card">
-                                        <span class="card-banner">Rutgers Info Widget</span>
-                                        <img src="./assets/images/image4.jpeg" class="img-responsive img-thumbnail" alt="random image">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6 col-sm-6 col-xs-12">
-                                <div class="card-container">
-                                    <div class="card">
-                                        <span class="card-banner">Rock Paper Scissors</span>
-                                        <img src="./assets/images/image5.jpeg" class="img-responsive img-thumbnail" alt="random image">
                                     </div>
                                 </div>
                             </div>
