--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!-- /.container -->
     </nav>
 
-    <div class="container">
+    <div class="container content-area">
         <div class="row">
             <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                 <div class="cardbox">
