updated portfolio to include hangman node app link, updated css for image size; deleted old images

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,9 +61,16 @@
                             <div class="col-md-6 col-sm-6 col-xs-12">
                                 <div class="card-container">
                                     <div class="card">
-                                        <!-- <span class="card-banner">Hangman</span> -->
-                                        <a href="https://github.com/nikitas91/liri-node-app" target="_blank">Liri App</a>
-                                        <img src="./assets/images/image1.jpeg" class="img-responsive img-thumbnail" alt="random image">
+                                        <a href="https://github.com/nikitas91/liri-node-app" target="_blank">Liri Node App</a>
+                                        <img src="./assets/images/liri.jpg" class="img-responsive img-thumbnail" alt="Liri Node App">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <div class="card-container">
+                                    <div class="card">
+                                        <a href="https://github.com/nikitas91/hangman-node-app" target="_blank">Hangman Node App</a>
+                                        <img src="./assets/images/hangman.png" class="img-responsive img-thumbnail" alt="Hangman Node App">
                                     </div>
                                 </div>
                             </div>
