added entry for bamazon project, added image for bamazon

--- a/portfolio.html
+++ b/portfolio.html
@@ -75,6 +75,16 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <div class="card-container">
+                                    <div class="card">
+                                        <a href="https://github.com/nikitas91/bamazon" target="_blank">Bamazon Node App</a>
+                                        <img src="./assets/images/bamazon.jpg" class="img-responsive img-thumbnail" alt="Bamazon Node App">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
